--- a/framework_node/index.html
+++ b/framework_node/index.html
@@ -1,1 +1,13 @@
-<!-- TODO -->
+<html>
+    <head>
+        <title>Client</title>
+        <link rel="shortcut icon" href="">
+    </head>
+    <body>
+        <div id="root"></div>
+        <canvas id="canvas">
+            Votre navigateur ne supporte pas canvas.
+        </canvas>
+        <script src="/static/bundle.js"></script>
+    </body>
+</html>
