Tune gameplay and graphics

--- a/framework_node/index.html
+++ b/framework_node/index.html
@@ -3,7 +3,7 @@
         <title>Client</title>
         <link rel="shortcut icon" href="">
     </head>
-    <body>
+    <body style="margin:0px;padding:0px;">
         <div id="root"></div>
         <canvas id="canvas">
             Votre navigateur ne supporte pas canvas.
