--- a/framework_node/index.html
+++ b/framework_node/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Client</title>
+        <title>Stgy</title>
         <link rel="shortcut icon" href="">
     </head>
     <body style="margin:0px;padding:0px;">
