corrected index.html pain file

--- a/paint_client/index.html
+++ b/paint_client/index.html
@@ -4,7 +4,7 @@
         <link rel="shortcut icon" href="">
     </head>
     <body style="margin:0px;padding:0px;">
-        <div id="root" style="visibility:hidden;display:none;">
+        <div id="root">
             <button onclick="triggerColorSettings()">Change default color</button>
             <button onclick="triggerThicknessSettings()">Change default thickness</button>
             <button onclick="triggerEraseMode()">Erase mode on/off</button>
